--- a/.editorconfig
+++ b/.editorconfig
@@ -1,15 +1,15 @@
 root = true
 
-[*]
+[*.{c,cpp,h}]
 charset = utf-8
 end_of_line = lf
+indent_size = 4
 indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{c,cpp,h}]
-indent_size = 4
-
 [*.md]
-insert_final_newline = false
-trim_trailing_whitespace = false
+charset = utf-8
+end_of_line = lf
+trim_trailing_whitespace = true
+insert_final_newline = true
