--- a/.editorconfig
+++ b/.editorconfig
@@ -13,3 +13,8 @@ charset = utf-8
 end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[configure.ac, Makefile.am]
+indent_style = tab
+insert_final_newline = true
+trim_trailing_whitespace = true
