--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,64 @@
+# Xcode
+
 xcuserdata/
 
+# Misc
+
+build/
 dist/
 obj/
+
+# https://www.gnu.org/software/automake
+
+Makefile.in
+/ar-lib
+/mdate-sh
+/py-compile
+/test-driver
+/ylwrap
+.deps/
+.dirstamp
+
+# httpss://www.gnu.org/software/autoconf
+
+autom4te.cache
+/autoscan.log
+/autoscan-*.log
+/aclocal.m4
+/compile
+/config.cache
+/config.guess
+/config.h.in
+/config.log
+/config.status
+/config.sub
+/configure
+/configure.scan
+/depcomp
+/install-sh
+/missing
+/stamp-h1
+
+/src/config/config.h
+/src/config/config.h.in
+
+# https://www.gnu.org/software/libtool/
+
+/ltmain.sh
+
+# https://www.gnu.org/software/texinfo
+
+/texinfo.tex
+
+# https://www.gnu.org/software/m4/
+
+m4/libtool.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
+
+# Generated Makefiles. Do not ignore the Emscripten app Makefile.
+
+/Makefile
+/src/**/Makefile
