--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -2,9 +2,12 @@ bin_PROGRAMS = tromino
 
 tromino_SOURCES = \
 	init.cpp \
+	init.h \
 	main.cpp \
 	trmn_graph.cpp \
-	trmn_graph_vt.cpp
+	trmn_graph.h \
+	trmn_graph_vt.cpp \
+	trmn_graph_vt.h
 
 tromino_CPPFLAGS = -I$(srcdir)/../lib
 
