--- a/xcode/TrominoPuzzle.xcodeproj/xcshareddata/xcschemes/TrominoPuzzle.Cli.xcscheme
+++ b/xcode/TrominoPuzzle.xcodeproj/xcshareddata/xcschemes/TrominoPuzzle.Cli.xcscheme
@@ -36,10 +36,10 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      ignoresPersistentStateOnLaunch = "NO"
+      ignoresPersistentStateOnLaunch = "YES"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES">
+      allowLocationSimulation = "NO">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
