Build SDL2 app on Linux

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,3 @@
-SUBDIRS = src/lib src/cli test/lib
+SUBDIRS = src/lib src/cli src/gfx2d src/gfx2dfe src/gui test/lib
 ACLOCAL_AMFLAGS = -I m4
 dist_doc_DATA = README.md
