--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -35,7 +35,7 @@ jobs:
 
     - name: Build
       run: |
-        sudo apt-get update && sudo apt-get install -yq autoconf-archive libboost-test-dev
+        sudo apt-get update && sudo apt-get install -yq autoconf-archive libboost-test-dev libsdl2-dev
         ./autogen.sh
         ./configure
         make
