--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,7 @@ jobs:
     pool:
       vmImage: 'ubuntu-latest'
     steps:
-      - script: sudo apt-get update && sudo apt-get install -yq autoconf-archive libboost-test-dev
+      - script: sudo apt-get update && sudo apt-get install -yq autoconf-archive libboost-test-dev libsdl2-dev
         displayName: 'Install dependencies'
 
       - script: ./autogen.sh
