--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -38,7 +38,7 @@ jobs:
         sudo apt-get update && sudo apt-get install -yq autoconf-archive libboost-test-dev libsdl2-dev
         ./autogen.sh
         ./configure
-        make
+        make -j $(($(nproc)*15)/10)
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
