--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -19,7 +19,7 @@ jobs:
       run: mkdir build && cd build && ../configure
 
     - name: Make
-      run: make
+      run: make -j $(($(nproc)*15)/10)
       working-directory: build
 
     - name: Test
