--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,11 @@
 * -text
 
+*.json linguist-vendored
+*.m4 linguist-vendored
+configure.ac linguist-vendored
 emscripten/app/*.html linguist-vendored
 emscripten/app/styles/* linguist-vendored
-m4/* linguist-vendored
+makefile linguist-vendored
+Makefile.am linguist-vendored
+msbuild/* linguist-vendored
+xcode/* linguist-vendored
