Fix canvas JS drwaing

--- a/emscripten/makefile
+++ b/emscripten/makefile
@@ -72,7 +72,7 @@ $(TARGET_GFX2D): $(OBJ_DIR)/lib/tromino.o $(GFX2D_OBJS) $(OBJ_DIR)/gfx2dfe/init.
 	-s ALLOW_TABLE_GROWTH=0 \
 	-s ALLOW_UNIMPLEMENTED_SYSCALLS=1 \
 	-s ASSERTIONS=0 \
-	-s ASYNCIFY \
+	-s ASYNCIFY=1 \
 	-s DISABLE_EXCEPTION_CATCHING=1 \
 	-s DYNAMIC_EXECUTION=0 \
 	-s ENVIRONMENT=web \
