--- a/.github/workflows/emscripten-build.yml
+++ b/.github/workflows/emscripten-build.yml
@@ -68,8 +68,8 @@ jobs:
             git config --global user.name 'Continuous Deployment Job'
             git config --global user.email 'oboukli@users.noreply.github.com'
             git add -A
-            git commit -am 'Automated deployment'
-            git push
+            git commit --amend -am 'Automated deployment'
+            git push --force
           else
             echo 'No web app changes found. Publish step skipped.'
           fi
