--- a/.github/workflows/emscripten-build.yml
+++ b/.github/workflows/emscripten-build.yml
@@ -20,6 +20,18 @@ jobs:
         ./emsdk activate latest
       working-directory: emsdk
 
+    - name: Emscripten cache
+      id: emscripten-cache
+      uses: actions/cache@v2
+      with:
+        path: emsdk/upstream/emscripten/cache
+        key: >-
+          emscripten-cache-${{ hashFiles(
+            'emsdk/upstream/emscripten/ChangeLog.md',
+            'emsdk/upstream/emscripten/package-lock.json',
+            'emsdk/upstream/emscripten/tools/ports/sdl2.py'
+          ) }}
+
     - name: Check out main repository
       uses: actions/checkout@v2
       with:
