--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,9 @@
+# Copyright (c) Omar Boukli-Hacene 2022. All Rights Reserved.
+# Distributed under an MIT-style license that can be
+# found in the LICENSE file.
+
+# SPDX-License-Identifier: MIT
+
 SUBDIRS = src test
 ACLOCAL_AMFLAGS = -I m4
 dist_doc_DATA = README.md
