--- a/configure.ac
+++ b/configure.ac
@@ -1,3 +1,9 @@
+# Copyright (c) Omar Boukli-Hacene 2022. All Rights Reserved.
+# Distributed under an MIT-style license that can be
+# found in the LICENSE file.
+
+# SPDX-License-Identifier: MIT
+
 AC_PREREQ([2.69])
 
 m4_define(_TRMNPZZL_VERSION_MAJOR, 0)
